- Updated the 'Equipment|Weapon|+Add' button to set all default weapon values for the attack row instead of just those synced from the Equipment's row. Fixes default hit-table info not being posted to chat (unless the selector was manually set) if the attack was created using the Equipment button. - Added a very subtle linear-gradient background(top transparent to bottom light gray) to a few sections to help introduce a little contrast between sections. - Fixed Equipment tabs for Carried|Not Carried|Mount|All not filtering.

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -196,6 +196,14 @@
   padding: 0;
 }
 
+.tab-content .charsheet .linear-background {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.3), transparent 90%);
+}
+
+.sheet-darkmode .tab-content .charsheet .linear-background {
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.3), transparent 90%);
+}
+
 /* background toggle */
 .charsheet .background {
   background-color: transparent;
@@ -2139,7 +2147,7 @@ section.npc-box.statblock3 .image-avatar {
   display: grid;
   grid-template-columns: 0.75fr 1fr 1fr 1fr 3em .5em 5em;
   justify-items: right;
-  padding: 2px;
+  padding: 4px;
 }
 
 .charsheet input[value='0'].weapon-type-toggle ~ .top-row .weapons-row1 .hide-if-melee,
